terminado a falta de responsi movil

--- a/src/pages/Sobremi/sobremi.css
+++ b/src/pages/Sobremi/sobremi.css
@@ -7,6 +7,7 @@
     align-items: flex-start;
     margin: 3rem 0 0 3rem;
     box-sizing: content-box;
+    overflow: scroll;
 }
 
 .sbm-title {
@@ -31,7 +32,7 @@ h3 {
     height: 5rem;
     width: 40rem;
     padding: 1.2rem 0 0 2rem;
-    margin-bottom: 2rem;
+    margin-top: 1rem;
 }
 
 p {
@@ -44,7 +45,7 @@ p {
     background-color: rgba(0, 128, 0, 0.55);
     width: 5rem;
     height: 1.2rem;
-    margin: 0 0 4.7rem 1.6rem;
+    margin: 2rem 0 4.7rem 1.6rem;
     padding: 0;
 }
 
@@ -62,7 +63,7 @@ p {
 
 .marcador {
     font-size: 1.8rem;
-    margin: -.72rem 0 0 -1.9rem;
+    margin: 1.2rem 0 0 -1.9rem;
     animation-name: parpadeo;
     animation-duration: 1s;
     animation-timing-function: linear;
